--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tatermorph",
-  "version": "7.0.0",
+  "name": "@tram-one/nanomorph",
+  "version": "7.0.1",
   "description": "Hyper fast diffing algorithm for real DOM nodes",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "test:fast": "browserify test/diff.js | tape-run",
     "start": "bankai start --debug test/diff.js"
   },
-  "repository": "Tram-One/tatermorph",
+  "repository": "Tram-One/nanomorph",
   "keywords": [
     "dom",
     "diff",
@@ -19,7 +19,8 @@
     "bel",
     "yo-yo",
     "tram-one",
-    "nanomorph"
+    "nanomorph",
+    "tatermorph"
   ],
   "license": "MIT",
   "devDependencies": {
